+ new
* changed
- removed

--------------------------------------------------------------------------------

❓ OpenMoji 12.5/13.0 - __ ___ 2020

New:
  + Black hole by @fuddl
  + Horse jumping hurdles
  + E048 to E04B Logos of OpenData projects e.g. OpenStreetMap by @fuddl

Redesign:
  * Construction

Fix:
  * Add white stars around New Zealand Flag's stars - @jtothegriff
  * Gender of mountain bikers
  * Darkness of colours in Tomato, Garlic, Bell Pepper
  * Shading in Grapes
  * White fill in Russian Doll and Slot Machine

Tech:
Misc:


--------------------------------------------------------------------------------

🏝 OpenMoji 12.4 - 28 Jul 2020

Many improvements, fixes and new OpenMojis:
👉 More Emoji 13, only 20 missing
👉 New set of gardening related things
👉 Lots of fixes
👉 New Code of Conduct

New:
  + Greta Thunberg
  + Copyleft Symbol
  + Sound Recording Copyright
  + Service Mark Symbol
  + Various gardening related things:
    gardener, lawn mower, push cart, axe, spade
  + Pigeon
  + Macaw
  + Bavaria subdivision flag by Manuel Strehl @Boldewyn
  + Bubble Tea, Coin, Window, Fondue, Accordion
    Bell Pepper, Teapot by Liz Bravo @lizbravob

Redesign:
  * Flags:
    Argentina, Mozambique and Taiwan by @wayne-shih
    Bahrain and New Calendonia by @carlinmack
  * Eject Symbol
  * Copyright
  * Registered
  * Trade Mark
  * Microbe/Virus to accommodate COVID, moved existing one to E011

Fix:
  * number of fingers in Face with Hand Over Mouth, Yawning Face, Hugging Face
  * size of hand in Thinking Face
  * contour in Shushing Face
    by @nicdiac
  * which black used in geometric Unicode shapes
  * number of keys in Keyboard
  * colour of contour in Half Orange Fruit
  * alignment of stars on US Flag
  * Croatian flag #247
  * size of Person Walking
  * white fill in:
        Carousel Horse, Foggy, High-Speed Train, Ballot Box, Chart Increasing, Chart
        Decreasing
  * handle in Megaphone
  * size and fill of Bookmark Tabs