@@ -3526,7 +3526,7 @@ emoji,hexcode,group,subgroups,annotation,tags,openmoji_tags,openmoji_author,open
 🏴󠁤󠁥󠁢󠁹󠁿,1F3F4-E0064-E0065-E0062-E0079-E007F,extras-unicode,subdivision-flag,bavaria flag,,"state, lozenge",Manuel Strehl,2020-07-09,,,,,?,
 🏴󠁵󠁳󠁣󠁡󠁿,1F3F4-E0075-E0073-E0063-E0061-E007F,extras-unicode,subdivision-flag,california flag,,"bear, republic, state",Alexander Müller,2020-04-26,,,,,?,
 🏴󠁵󠁳󠁴󠁸󠁿,1F3F4-E0075-E0073-E0074-E0078-E007F,extras-unicode,subdivision-flag,texas flag,,"cowboy, lone star, republic, state",Carlin MacKenzie,2020-04-03,,,,,?,
-🏴󠁥󠁳󠁣󠁴󠁿,1FEF4-E0065-E0074-E0063-EOO74-E007F,extras-unicode,subdivision-flag,catalonia flag,,"catalan, senyera",Joan Montané,2020-08-24,,,,,?,
+🻴󠁥󠁳󠁣󠁴󠁿,1FEF4-E0065-E0073-E0063-E0074-E007F,extras-unicode,subdivision-flag,catalonia flag,,"catalan, senyera",Joan Montané,2020-08-24,,,,,?,
 🄍,1F10D,extras-unicode,symbol-other,circled zero with slash,,"license, copyright, creative commons, open, libre, public domain",Carlin MacKenzie,2020-04-17,,,,,13,
 🄎,1F10E,extras-unicode,symbol-other,circled anticlockwise arrow,,"license, copyright, creative commons, open, libre, share alike",Carlin MacKenzie,2020-04-17,,,,,13,
 🄏,1F10F,extras-unicode,symbol-other,circled dollar sign with overlaid backslash,,"license, copyright, creative commons, open, libre, non commercial",Carlin MacKenzie,2020-04-17,,,,,13,
