@@ -59959,8 +59959,8 @@
     "order": ""
   },
   {
-    "emoji": "🏴󠁥󠁳󠁣󠁴󠁿",
-    "hexcode": "1FEF4-E0065-E0074-E0063-EOO74-E007F",
+    "emoji": "🻴󠁥󠁳󠁣󠁴󠁿",
+    "hexcode": "1FEF4-E0065-E0073-E0063-E0074-E007F",
     "group": "extras-unicode",
     "subgroups": "subdivision-flag",
     "annotation": "catalonia flag",
