@@ -56475,6 +56475,22 @@ tr:nth-child(even) {
 
     <tr>
         <td>3527</td>
+        <td><img class="lazy" data-src="black/svg/1FEF4-E0065-E0073-E0063-E0074-E007F.svg" height="72" width="72"></td>
+        <td><img class="lazy" data-src="color/svg/1FEF4-E0065-E0073-E0063-E0074-E007F.svg" height="72" width="72"></td>
+        <td>🻴󠁥󠁳󠁣󠁴󠁿</td>
+        <td>1FEF4-E0065-E0073-E0063-E0074-E007F</td>
+        <td>extras-unicode</td>
+        <td>subdivision-flag</td>
+        <td>catalonia flag</td>
+        <td></td>
+        <td>catalan,  senyera</td>
+        <td>Joan Montané</td>
+        <td><a download href="src/extras-unicode/subdivision-flag/1FEF4-E0065-E0073-E0063-E0074-E007F.svg">⬇</a></td>
+    </tr>
+    
+
+    <tr>
+        <td>3528</td>
         <td><img class="lazy" data-src="black/svg/1F10D.svg" height="72" width="72"></td>
         <td><img class="lazy" data-src="color/svg/1F10D.svg" height="72" width="72"></td>
         <td>🄍</td>
@@ -56490,7 +56506,7 @@ tr:nth-child(even) {
     
 
     <tr>
-        <td>3528</td>
+        <td>3529</td>
         <td><img class="lazy" data-src="black/svg/1F10E.svg" height="72" width="72"></td>
         <td><img class="lazy" data-src="color/svg/1F10E.svg" height="72" width="72"></td>
         <td>🄎</td>
@@ -56506,7 +56522,7 @@ tr:nth-child(even) {
     
 
     <tr>
-        <td>3529</td>
+        <td>3530</td>
         <td><img class="lazy" data-src="black/svg/1F10F.svg" height="72" width="72"></td>
         <td><img class="lazy" data-src="color/svg/1F10F.svg" height="72" width="72"></td>
         <td>🄏</td>
@@ -56522,7 +56538,7 @@ tr:nth-child(even) {
     
 
     <tr>
-        <td>3530</td>
+        <td>3531</td>
         <td><img class="lazy" data-src="black/svg/1F12F.svg" height="72" width="72"></td>
         <td><img class="lazy" data-src="color/svg/1F12F.svg" height="72" width="72"></td>
         <td>🄯</td>
@@ -56538,7 +56554,7 @@ tr:nth-child(even) {
     
 
     <tr>
-        <td>3531</td>
+        <td>3532</td>
         <td><img class="lazy" data-src="black/svg/1F16D.svg" height="72" width="72"></td>
         <td><img class="lazy" data-src="color/svg/1F16D.svg" height="72" width="72"></td>
         <td>🅭</td>
@@ -56554,7 +56570,7 @@ tr:nth-child(even) {
     
 
     <tr>
-        <td>3532</td>
+        <td>3533</td>
         <td><img class="lazy" data-src="black/svg/1F16E.svg" height="72" width="72"></td>
         <td><img class="lazy" data-src="color/svg/1F16E.svg" height="72" width="72"></td>
         <td>🅮</td>
@@ -56570,7 +56586,7 @@ tr:nth-child(even) {
     
 
     <tr>
-        <td>3533</td>
+        <td>3534</td>
         <td><img class="lazy" data-src="black/svg/1F16F.svg" height="72" width="72"></td>
         <td><img class="lazy" data-src="color/svg/1F16F.svg" height="72" width="72"></td>
         <td>🅯</td>
@@ -56586,7 +56602,7 @@ tr:nth-child(even) {
     
 
     <tr>
-        <td>3534</td>
+        <td>3535</td>
         <td><img class="lazy" data-src="black/svg/1F431-200D-1F4BB.svg" height="72" width="72"></td>
         <td><img class="lazy" data-src="color/svg/1F431-200D-1F4BB.svg" height="72" width="72"></td>
         <td>🐱‍💻</td>
@@ -56602,7 +56618,7 @@ tr:nth-child(even) {
     
 
     <tr>
-        <td>3535</td>
+        <td>3536</td>
         <td><img class="lazy" data-src="black/svg/2117.svg" height="72" width="72"></td>
         <td><img class="lazy" data-src="color/svg/2117.svg" height="72" width="72"></td>
         <td>℗</td>
@@ -56618,7 +56634,7 @@ tr:nth-child(even) {
     
 
     <tr>
-        <td>3536</td>
+        <td>3537</td>
         <td><img class="lazy" data-src="black/svg/2120.svg" height="72" width="72"></td>
         <td><img class="lazy" data-src="color/svg/2120.svg" height="72" width="72"></td>
         <td>℠</td>
@@ -56634,7 +56650,7 @@ tr:nth-child(even) {
     
 
     <tr>
-        <td>3537</td>
+        <td>3538</td>
         <td><img class="lazy" data-src="black/svg/229C.svg" height="72" width="72"></td>
         <td><img class="lazy" data-src="color/svg/229C.svg" height="72" width="72"></td>
         <td>⊜</td>
@@ -56650,7 +56666,7 @@ tr:nth-child(even) {
     
 
     <tr>
-        <td>3538</td>
+        <td>3539</td>
         <td><img class="lazy" data-src="black/svg/23FB.svg" height="72" width="72"></td>
         <td><img class="lazy" data-src="color/svg/23FB.svg" height="72" width="72"></td>
         <td>⏻</td>
@@ -56666,7 +56682,7 @@ tr:nth-child(even) {
     
 
     <tr>
-        <td>3539</td>
+        <td>3540</td>
         <td><img class="lazy" data-src="black/svg/23FC.svg" height="72" width="72"></td>
         <td><img class="lazy" data-src="color/svg/23FC.svg" height="72" width="72"></td>
         <td>⏼</td>
@@ -56682,7 +56698,7 @@ tr:nth-child(even) {
     
 
     <tr>
-        <td>3540</td>
+        <td>3541</td>
         <td><img class="lazy" data-src="black/svg/23FD.svg" height="72" width="72"></td>
         <td><img class="lazy" data-src="color/svg/23FD.svg" height="72" width="72"></td>
         <td>⏽</td>
@@ -56698,7 +56714,7 @@ tr:nth-child(even) {
     
 
     <tr>
-        <td>3541</td>
+        <td>3542</td>
         <td><img class="lazy" data-src="black/svg/23FE.svg" height="72" width="72"></td>
         <td><img class="lazy" data-src="color/svg/23FE.svg" height="72" width="72"></td>
         <td>⏾</td>
@@ -56714,7 +56730,7 @@ tr:nth-child(even) {
     
 
     <tr>
-        <td>3542</td>
+        <td>3543</td>
         <td><img class="lazy" data-src="black/svg/25A1.svg" height="72" width="72"></td>
         <td><img class="lazy" data-src="color/svg/25A1.svg" height="72" width="72"></td>
         <td>□</td>
@@ -56730,7 +56746,7 @@ tr:nth-child(even) {
     
 
     <tr>
-        <td>3543</td>
+        <td>3544</td>
         <td><img class="lazy" data-src="black/svg/25AC.svg" height="72" width="72"></td>
         <td><img class="lazy" data-src="color/svg/25AC.svg" height="72" width="72"></td>
         <td>▬</td>
@@ -56746,7 +56762,7 @@ tr:nth-child(even) {
     
 
     <tr>
-        <td>3544</td>
+        <td>3545</td>
         <td><img class="lazy" data-src="black/svg/25AD.svg" height="72" width="72"></td>
         <td><img class="lazy" data-src="color/svg/25AD.svg" height="72" width="72"></td>
         <td>▭</td>
@@ -56762,7 +56778,7 @@ tr:nth-child(even) {
     
 
     <tr>
-        <td>3545</td>
+        <td>3546</td>
         <td><img class="lazy" data-src="black/svg/25D0.svg" height="72" width="72"></td>
         <td><img class="lazy" data-src="color/svg/25D0.svg" height="72" width="72"></td>
         <td>◐</td>
@@ -56778,7 +56794,7 @@ tr:nth-child(even) {
     
 
     <tr>
-        <td>3546</td>
+        <td>3547</td>
         <td><img class="lazy" data-src="black/svg/25D1.svg" height="72" width="72"></td>
         <td><img class="lazy" data-src="color/svg/25D1.svg" height="72" width="72"></td>
         <td>◑</td>
@@ -56794,7 +56810,7 @@ tr:nth-child(even) {
     
 
     <tr>
-        <td>3547</td>
+        <td>3548</td>
         <td><img class="lazy" data-src="black/svg/25E7.svg" height="72" width="72"></td>
         <td><img class="lazy" data-src="color/svg/25E7.svg" height="72" width="72"></td>
         <td>◧</td>
@@ -56810,7 +56826,7 @@ tr:nth-child(even) {
     
 
     <tr>
-        <td>3548</td>
+        <td>3549</td>
         <td><img class="lazy" data-src="black/svg/25E8.svg" height="72" width="72"></td>
         <td><img class="lazy" data-src="color/svg/25E8.svg" height="72" width="72"></td>
         <td>◨</td>
@@ -56826,7 +56842,7 @@ tr:nth-child(even) {
     
 
     <tr>
-        <td>3549</td>
+        <td>3550</td>
         <td><img class="lazy" data-src="black/svg/25E9.svg" height="72" width="72"></td>
         <td><img class="lazy" data-src="color/svg/25E9.svg" height="72" width="72"></td>
         <td>◩</td>
@@ -56842,7 +56858,7 @@ tr:nth-child(even) {
     
 
     <tr>
-        <td>3550</td>
+        <td>3551</td>
         <td><img class="lazy" data-src="black/svg/25EA.svg" height="72" width="72"></td>
         <td><img class="lazy" data-src="color/svg/25EA.svg" height="72" width="72"></td>
         <td>◪</td>
@@ -56858,7 +56874,7 @@ tr:nth-child(even) {
     
 
     <tr>
-        <td>3551</td>
+        <td>3552</td>
         <td><img class="lazy" data-src="black/svg/25ED.svg" height="72" width="72"></td>
         <td><img class="lazy" data-src="color/svg/25ED.svg" height="72" width="72"></td>
         <td>◭</td>
@@ -56874,7 +56890,7 @@ tr:nth-child(even) {
     
 
     <tr>
-        <td>3552</td>
+        <td>3553</td>
         <td><img class="lazy" data-src="black/svg/25EE.svg" height="72" width="72"></td>
         <td><img class="lazy" data-src="color/svg/25EE.svg" height="72" width="72"></td>
         <td>◮</td>
@@ -56890,7 +56906,7 @@ tr:nth-child(even) {
     
 
     <tr>
-        <td>3553</td>
+        <td>3554</td>
         <td><img class="lazy" data-src="black/svg/2B0C.svg" height="72" width="72"></td>
         <td><img class="lazy" data-src="color/svg/2B0C.svg" height="72" width="72"></td>
         <td>⬌</td>
@@ -56906,7 +56922,7 @@ tr:nth-child(even) {
     
 
     <tr>
-        <td>3554</td>
+        <td>3555</td>
         <td><img class="lazy" data-src="black/svg/2B0D.svg" height="72" width="72"></td>
         <td><img class="lazy" data-src="color/svg/2B0D.svg" height="72" width="72"></td>
         <td>⬍</td>
@@ -56922,7 +56938,7 @@ tr:nth-child(even) {
     
 
     <tr>
-        <td>3555</td>
+        <td>3556</td>
         <td><img class="lazy" data-src="black/svg/2B1F.svg" height="72" width="72"></td>
         <td><img class="lazy" data-src="color/svg/2B1F.svg" height="72" width="72"></td>
         <td>⬟</td>
@@ -56938,7 +56954,7 @@ tr:nth-child(even) {
     
 
     <tr>
-        <td>3556</td>
+        <td>3557</td>
         <td><img class="lazy" data-src="black/svg/2B20.svg" height="72" width="72"></td>
         <td><img class="lazy" data-src="color/svg/2B20.svg" height="72" width="72"></td>
         <td>⬠</td>
@@ -56954,7 +56970,7 @@ tr:nth-child(even) {
     
 
     <tr>
-        <td>3557</td>
+        <td>3558</td>
         <td><img class="lazy" data-src="black/svg/2B21.svg" height="72" width="72"></td>
         <td><img class="lazy" data-src="color/svg/2B21.svg" height="72" width="72"></td>
         <td>⬡</td>
@@ -56970,7 +56986,7 @@ tr:nth-child(even) {
     
 
     <tr>
-        <td>3558</td>
+        <td>3559</td>
         <td><img class="lazy" data-src="black/svg/2B22.svg" height="72" width="72"></td>
         <td><img class="lazy" data-src="color/svg/2B22.svg" height="72" width="72"></td>
         <td>⬢</td>
@@ -56986,7 +57002,7 @@ tr:nth-child(even) {
     
 
     <tr>
-        <td>3559</td>
+        <td>3560</td>
         <td><img class="lazy" data-src="black/svg/2B23.svg" height="72" width="72"></td>
         <td><img class="lazy" data-src="color/svg/2B23.svg" height="72" width="72"></td>
         <td>⬣</td>
@@ -57002,7 +57018,7 @@ tr:nth-child(even) {
     
 
     <tr>
-        <td>3560</td>
+        <td>3561</td>
         <td><img class="lazy" data-src="black/svg/2B24.svg" height="72" width="72"></td>
         <td><img class="lazy" data-src="color/svg/2B24.svg" height="72" width="72"></td>
         <td>⬤</td>
@@ -57018,7 +57034,7 @@ tr:nth-child(even) {
     
 
     <tr>
-        <td>3561</td>
+        <td>3562</td>
         <td><img class="lazy" data-src="black/svg/2B2E.svg" height="72" width="72"></td>
         <td><img class="lazy" data-src="color/svg/2B2E.svg" height="72" width="72"></td>
         <td>⬮</td>
@@ -57034,7 +57050,7 @@ tr:nth-child(even) {
     
 
     <tr>
-        <td>3562</td>
+        <td>3563</td>
         <td><img class="lazy" data-src="black/svg/2B2F.svg" height="72" width="72"></td>
         <td><img class="lazy" data-src="color/svg/2B2F.svg" height="72" width="72"></td>
         <td>⬯</td>
@@ -57050,7 +57066,7 @@ tr:nth-child(even) {
     
 
     <tr>
-        <td>3563</td>
+        <td>3564</td>
         <td><img class="lazy" data-src="black/svg/2B58.svg" height="72" width="72"></td>
         <td><img class="lazy" data-src="color/svg/2B58.svg" height="72" width="72"></td>
         <td>⭘</td>
@@ -57066,7 +57082,7 @@ tr:nth-child(even) {
     
 
     <tr>
-        <td>3564</td>
+        <td>3565</td>
         <td><img class="lazy" data-src="black/svg/2B8F.svg" height="72" width="72"></td>
         <td><img class="lazy" data-src="color/svg/2B8F.svg" height="72" width="72"></td>
         <td>⮏</td>
@@ -57082,7 +57098,7 @@ tr:nth-child(even) {
     
 
     <tr>
-        <td>3565</td>
+        <td>3566</td>
         <td><img class="lazy" data-src="black/svg/2BBA.svg" height="72" width="72"></td>
         <td><img class="lazy" data-src="color/svg/2BBA.svg" height="72" width="72"></td>
         <td>⮺</td>
@@ -57098,7 +57114,7 @@ tr:nth-child(even) {
     
 
     <tr>
-        <td>3566</td>
+        <td>3567</td>
         <td><img class="lazy" data-src="black/svg/2BBB.svg" height="72" width="72"></td>
         <td><img class="lazy" data-src="color/svg/2BBB.svg" height="72" width="72"></td>
         <td>⮻</td>
@@ -57114,7 +57130,7 @@ tr:nth-child(even) {
     
 
     <tr>
-        <td>3567</td>
+        <td>3568</td>
         <td><img class="lazy" data-src="black/svg/2BBC.svg" height="72" width="72"></td>
         <td><img class="lazy" data-src="color/svg/2BBC.svg" height="72" width="72"></td>
         <td>⮼</td>
@@ -57130,7 +57146,7 @@ tr:nth-child(even) {
     
 
     <tr>
-        <td>3568</td>
+        <td>3569</td>
         <td><img class="lazy" data-src="black/svg/2BC3.svg" height="72" width="72"></td>
         <td><img class="lazy" data-src="color/svg/2BC3.svg" height="72" width="72"></td>
         <td>⯃</td>
@@ -57146,7 +57162,7 @@ tr:nth-child(even) {
     
 
     <tr>
-        <td>3569</td>
+        <td>3570</td>
         <td><img class="lazy" data-src="black/svg/2BC4.svg" height="72" width="72"></td>
         <td><img class="lazy" data-src="color/svg/2BC4.svg" height="72" width="72"></td>
         <td>⯄</td>
