@@ -6488,6 +6488,9 @@ li.selected {
     </button><button onclick="copyToClipboard('1F3F4-E0075-E0073-E0074-E0078-E007F')">
         <img alt="texas flag" title="texas flag - 1F3F4-E0075-E0073-E0074-E0078-E007F"
         src="color/72x72/1F3F4-E0075-E0073-E0074-E0078-E007F.png" height="72" width="72">
+    </button><button onclick="copyToClipboard('1FEF4-E0065-E0073-E0063-E0074-E007F')">
+        <img alt="catalonia flag" title="catalonia flag - 1FEF4-E0065-E0073-E0063-E0074-E007F"
+        src="color/72x72/1FEF4-E0065-E0073-E0063-E0074-E007F.png" height="72" width="72">
     </button><button onclick="copyToClipboard('1F10D')">
         <img alt="circled zero with slash" title="circled zero with slash - 1F10D"
         src="color/72x72/1F10D.png" height="72" width="72">
@@ -12878,6 +12881,9 @@ li.selected {
     </button><button onclick="copyToClipboard('1F3F4-E0075-E0073-E0074-E0078-E007F')">
         <img alt="texas flag" title="texas flag - 1F3F4-E0075-E0073-E0074-E0078-E007F"
         src="black/72x72/1F3F4-E0075-E0073-E0074-E0078-E007F.png" height="72" width="72">
+    </button><button onclick="copyToClipboard('1FEF4-E0065-E0073-E0063-E0074-E007F')">
+        <img alt="catalonia flag" title="catalonia flag - 1FEF4-E0065-E0073-E0063-E0074-E007F"
+        src="black/72x72/1FEF4-E0065-E0073-E0063-E0074-E007F.png" height="72" width="72">
     </button><button onclick="copyToClipboard('1F10D')">
         <img alt="circled zero with slash" title="circled zero with slash - 1F10D"
         src="black/72x72/1F10D.png" height="72" width="72">
@@ -19268,6 +19274,9 @@ li.selected {
     </button><button onclick="copyToClipboard('1F3F4-E0075-E0073-E0074-E0078-E007F')">
         <img alt="texas flag" title="texas flag - 1F3F4-E0075-E0073-E0074-E0078-E007F"
         src="color/svg/1F3F4-E0075-E0073-E0074-E0078-E007F.svg" height="72" width="72">
+    </button><button onclick="copyToClipboard('1FEF4-E0065-E0073-E0063-E0074-E007F')">
+        <img alt="catalonia flag" title="catalonia flag - 1FEF4-E0065-E0073-E0063-E0074-E007F"
+        src="color/svg/1FEF4-E0065-E0073-E0063-E0074-E007F.svg" height="72" width="72">
     </button><button onclick="copyToClipboard('1F10D')">
         <img alt="circled zero with slash" title="circled zero with slash - 1F10D"
         src="color/svg/1F10D.svg" height="72" width="72">
@@ -25658,6 +25667,9 @@ li.selected {
     </button><button onclick="copyToClipboard('1F3F4-E0075-E0073-E0074-E0078-E007F')">
         <img alt="texas flag" title="texas flag - 1F3F4-E0075-E0073-E0074-E0078-E007F"
         src="black/svg/1F3F4-E0075-E0073-E0074-E0078-E007F.svg" height="72" width="72">
+    </button><button onclick="copyToClipboard('1FEF4-E0065-E0073-E0063-E0074-E007F')">
+        <img alt="catalonia flag" title="catalonia flag - 1FEF4-E0065-E0073-E0063-E0074-E007F"
+        src="black/svg/1FEF4-E0065-E0073-E0063-E0074-E007F.svg" height="72" width="72">
     </button><button onclick="copyToClipboard('1F10D')">
         <img alt="circled zero with slash" title="circled zero with slash - 1F10D"
         src="black/svg/1F10D.svg" height="72" width="72">
@@ -29961,6 +29973,8 @@ li.selected {
         <p title="california flag - 1F3F4-E0075-E0073-E0063-E0061-E007F">🏴󠁵󠁳󠁣󠁡󠁿</p>
     </button><button onclick="copyToClipboard('1F3F4-E0075-E0073-E0074-E0078-E007F')">
         <p title="texas flag - 1F3F4-E0075-E0073-E0074-E0078-E007F">🏴󠁵󠁳󠁴󠁸󠁿</p>
+    </button><button onclick="copyToClipboard('1FEF4-E0065-E0073-E0063-E0074-E007F')">
+        <p title="catalonia flag - 1FEF4-E0065-E0073-E0063-E0074-E007F">🻴󠁥󠁳󠁣󠁴󠁿</p>
     </button><button onclick="copyToClipboard('1F10D')">
         <p title="circled zero with slash - 1F10D">🄍</p>
     </button><button onclick="copyToClipboard('1F10E')">
