@@ -10,6 +10,7 @@ New:
   + Black hole by @fuddl
   + Horse jumping hurdles
   + E048 to E04B Logos of OpenData projects e.g. OpenStreetMap by @fuddl
+  + Catalonia flag by Joan Montané
 
 Redesign:
   * Construction
